redact-pdf/orchestrator/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
  namespace: anonymus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
        - name: orchestrator
          image: joreg/orchestrator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
