redact-pdf/orchestrator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  namespace: anonymus
spec:
  selector:
    app: orchestrator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
