redact-pdf/orchestrator/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-ingress
  namespace: anonymus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: anonymus.kube.isc.heia-fr.ch  
      http:
        paths:
          - path: /pipeline
            pathType: Prefix
            backend:
              service:
                name: orchestrator-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orchestrator-service
                port:
                  number: 80
